added projects section

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                     <section class="my-auto py-auto">
                         <h3>Make your house</h3>
                         <h2 class="mb-4">BROWNOUT-FREE</h2>
-                        <h3 class="mb-5">
+                        <h3 class="mb-3">
                             Why <span>BZ Power Solution?</span>
                         </h3>
                         <p>
@@ -114,109 +114,29 @@
                         </button>
                     </section>
                 </div>
-                <div class="col-md-7">
-                    <section class="row d-none d-md-block">
+                <div class="col-md-7 d-lg-block text-center">
+                    <section
+                        class="row d-none d-md-flex flex-row justify-content-center"
+                    >
+                        <img
+                            id="about-images"
+                            class="w-50 m-2 image-shadow p-0"
+                            src="./images/galler1_crop.jpg"
+                            alt=""
+                        />
                         <div
-                            id="carouselExampleCaptions"
-                            class="carousel slide d-flex align-items-center"
-                            data-bs-ride="false"
+                            class="d-none d-xl-flex flex-column w-25 text-start p-0 align-items-center"
                         >
-                            <div class="carousel-indicators">
-                                <button
-                                    type="button"
-                                    data-bs-target="#carouselExampleCaptions"
-                                    data-bs-slide-to="0"
-                                    class="active"
-                                    aria-current="true"
-                                    aria-label="Slide 1"
-                                ></button>
-                                <button
-                                    type="button"
-                                    data-bs-target="#carouselExampleCaptions"
-                                    data-bs-slide-to="1"
-                                    aria-label="Slide 2"
-                                ></button>
-                                <button
-                                    type="button"
-                                    data-bs-target="#carouselExampleCaptions"
-                                    data-bs-slide-to="2"
-                                    aria-label="Slide 3"
-                                ></button>
-                            </div>
-                            <div class="carousel-inner">
-                                <div class="carousel-item active">
-                                    <img
-                                        src="./images/galler1_crop.jpg"
-                                        class="d-block w-100"
-                                        alt="..."
-                                    />
-                                    <div
-                                        class="carousel-caption d-none d-md-block"
-                                    >
-                                        <h5>First slide label</h5>
-                                        <p>
-                                            Some representative placeholder
-                                            content for the first slide.
-                                        </p>
-                                    </div>
-                                </div>
-                                <div class="carousel-item">
-                                    <img
-                                        src="./images/1crop.jpg"
-                                        class="d-block w-100"
-                                        alt="..."
-                                    />
-                                    <div
-                                        class="carousel-caption d-none d-md-block"
-                                    >
-                                        <h5>Second slide label</h5>
-                                        <p>
-                                            Some representative placeholder
-                                            content for the second slide.
-                                        </p>
-                                    </div>
-                                </div>
-                                <div class="carousel-item">
-                                    <img
-                                        src="./images/2crop.jpg"
-                                        class="d-block w-100"
-                                        alt="..."
-                                    />
-                                    <div
-                                        class="carousel-caption d-none d-md-block"
-                                    >
-                                        <h5>Third slide label</h5>
-                                        <p>
-                                            Some representative placeholder
-                                            content for the third slide.
-                                        </p>
-                                    </div>
-                                </div>
-                            </div>
-                            <button
-                                class="carousel-control-prev"
-                                type="button"
-                                data-bs-target="#carouselExampleCaptions"
-                                data-bs-slide="prev"
-                            >
-                                <span
-                                    class="carousel-control-prev-icon"
-                                    aria-hidden="true"
-                                ></span>
-                                <span class="visually-hidden">Previous</span>
-                            </button>
-                            <button
-                                class="carousel-control-next"
-                                type="button"
-                                data-bs-target="#carouselExampleCaptions"
-                                data-bs-slide="next"
-                            >
-                                <span
-                                    class="carousel-control-next-icon"
-                                    aria-hidden="true"
-                                ></span>
-                                <span class="visually-hidden">Next</span>
-                            </button>
+                            <img
+                                class="image-shadow img-fluid m-2"
+                                src="./images/1crop.jpg"
+                                alt=""
+                            />
+                            <img
+                                class="image-shadow img-fluid m-2"
+                                src="./images/2crop.jpg"
+                                alt=""
+                            />
                         </div>
                     </section>
                 </div>
@@ -224,6 +144,134 @@
         </div>
 
         <!-- About End -->
+
+        <!-- Project Page Start -->
+        <div class="container-fluid project-background">
+            <h1 class="text-center pt-5 mb-5">Projects</h1>
+
+            <div class="row min-vh-50 px-lg-5 mx-lg-5">
+                <div class="col-xl-4 col-md-6 mb-3">
+                    <div class="card">
+                        <img
+                            src="./images/latest/1crop.jpg"
+                            class="card-img-top"
+                            alt="..."
+                        />
+                        <div class="card-body">
+                            <h4 class="card-title">
+                                1.2 kW Hybrid Off-Grid System
+                            </h4>
+                            <h6>Masbate</h6>
+                            <p class="card-text">
+                                1.2 kW Hybrid Off-Grid System with 2.4 kW-hr
+                                Battery Bank
+                            </p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-xl-4 col-md-6 mb-3">
+                    <div class="card">
+                        <img
+                            src="./images/latest/2crop.jpg"
+                            class="card-img-top"
+                            alt="..."
+                        />
+                        <div class="card-body">
+                            <h4 class="card-title">
+                                --kW hybrid offgrid system
+                            </h4>
+                            <h6>Sitio Alonzo, Cabitan, Mandaon, Masbate</h6>
+
+                            <p class="card-text">Two Solar PV</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-xl-4 col-md-6 mb-3">
+                    <div class="card">
+                        <img
+                            src="./images/latest/3crop.jpg"
+                            class="card-img-top"
+                            alt="..."
+                        />
+                        <div class="card-body">
+                            <h4 class="card-title">6kW TBB Hybrid Inverter,</h4>
+                            <h6>
+                                Villaconcepcion, Ibingay, Masbate City, Masbate.
+                            </h6>
+                            <p class="card-text">
+                                6 kW TBB Hybrid Inverter, 2.7 kW Solar panels,
+                                12 kW-hr Battery Capacity with SMART Automatic
+                                Transfer Switch.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-xl-4 col-md-6 mb-3">
+                    <div class="card">
+                        <img
+                            src="./images/latest/4crop.jpg"
+                            class="card-img-top"
+                            alt="..."
+                        />
+                        <div class="card-body">
+                            <h4 class="card-title">
+                                8kW Hybrid On-Grid/Off-Grid System
+                            </h4>
+                            <h6>Mobo, Masbate.</h6>
+                            <p class="card-text">
+                                8 kW Deye inverter, 19.2 kW-hr Battery Bank and
+                                4 kW Solar Panels.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-xl-4 col-md-6 mb-3">
+                    <div class="card">
+                        <img
+                            src="./images/latest/5crop.jpg"
+                            class="card-img-top"
+                            alt="..."
+                        />
+                        <div class="card-body">
+                            <h4 class="card-title">
+                                3kW hybrid Solar PV System
+                            </h4>
+                            <h6>Poblacion, Pio V. Corpuz, Masbate.</h6>
+                            <p class="card-text"></p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-xl-4 col-md-6 mb-3">
+                    <div class="card">
+                        <img
+                            src="./images/latest/6crop.jpg"
+                            class="card-img-top"
+                            alt="..."
+                        />
+                        <div class="card-body">
+                            <h4 class="card-title">6kW TBB Inverter</h4>
+                            <h6>Magsaysay, Uson, Masbate.</h6>
+                            <p class="card-text">
+                                6kW TBB Inverter with WiFi dongle, 2.7 kW Solar
+                                Panels and 12.0 kW-hr Battery Bank Capacity
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="text-center p-3 m-0">
+                <button class="button-one p-1 mt-2 px-2 rounded-pill">
+                    View all projects
+                </button>
+            </div>
+        </div>
+
+        <!-- Project Page End -->
 
         <!-- Bootstrap -->
         <script
