--- a/index.html
+++ b/index.html
@@ -20,10 +20,11 @@
     <body>
         <!-- Nav Bar Start-->
         <nav
-            class="navbar navbar-expand-md bg-light bg-opacity-75 px-md-5 fixed-top"
+            id="nav-bar"
+            class="navbar navbar-expand-md bg-light bg-opacity- px-md-5 fixed-top"
         >
             <div class="container-fluid">
-                <a class="navbar-brand text-center m-0" href="#"
+                <a class="navbar-brand text-center m-0" href="#landing"
                     ><img width="40px" src="./images/ICON.png" alt=""
                 /></a>
                 <button
@@ -43,7 +44,7 @@
                 >
                     <ul class="navbar-nav align-items-center">
                         <li class="nav-item">
-                            <a class="nav-link" href="#"
+                            <a class="nav-link" href="#contact"
                                 ><button
                                     class="button-one p-1 px-2 rounded-pill d-none d-md-block"
                                 >
@@ -60,13 +61,13 @@
                             >
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">About</a>
+                            <a class="nav-link" href="#about">About</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Projects</a>
+                            <a class="nav-link" href="#project">Projects</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Services</a>
+                            <a class="nav-link" href="#services">Services</a>
                         </li>
                     </ul>
                 </div>
@@ -75,14 +76,17 @@
         <!-- Nav Bar End-->
 
         <!-- Landing Start -->
-        <div class="container-fluid top-margin min-vh-100 landing-page">
+        <div
+            id="landing"
+            class="container-fluid top-margin min-vh-100 landing-page"
+        >
             <div
                 class="row min-vh-100 d-flex align-items-center px-md-5 mx-md-5"
             >
                 <div class="heading">
-                    <h1 class="">Get out on Power Interruption</h1>
-                    <h1>Get <span>Solar</span></h1>
-                    <h5 class="mt-5">Want to know more?</h5>
+                    <h1 class="text-light">Get out on Power Interruption</h1>
+                    <h1 class="text-light">Get <span>Solar</span></h1>
+                    <h5 class="mt-5 text-light">Want to know more?</h5>
                     <button class="button-one p-1 mt-2 px-2 rounded-pill">
                         Contact Us
                     </button>
@@ -92,7 +96,7 @@
         <!-- Landing End -->
 
         <!-- About Start -->
-        <div class="container-fluid about-page">
+        <div id="about" class="container-fluid about-page">
             <div
                 class="row d-flex align-items-center min-vh-100 px-lg-5 mx-lg-5"
             >
@@ -146,8 +150,8 @@
         <!-- About End -->
 
         <!-- Project Page Start -->
-        <div class="container-fluid project-background">
-            <h1 class="text-center pt-5 mb-5">Projects</h1>
+        <div id="project" class="container-fluid project-background">
+            <h1 class="text-center pt-5 mb-5 text-light">Projects</h1>
 
             <div class="row min-vh-50 px-lg-5 mx-lg-5">
                 <div class="col-xl-4 col-md-6 mb-3">
@@ -264,7 +268,7 @@
                     </div>
                 </div>
             </div>
-            <div class="text-center p-3 m-0">
+            <div class="text-center p-3 pb-5 m-0 m">
                 <button class="button-one p-1 mt-2 px-2 rounded-pill">
                     View all projects
                 </button>
@@ -272,6 +276,147 @@
         </div>
 
         <!-- Project Page End -->
+
+        <!-- Services and Contact Start -->
+        <div id="services" class="container-fluid">
+            <div class="row services-contact px-lg-5 mx-lg-5">
+                <div
+                    class="col-md-6 min-vh-100 text-center d-md-flex justify-content-center flex-column"
+                >
+                    <div class="w-75 mx-auto my-5">
+                        <h2>Our Services</h2>
+                        <p>
+                            BZ Power Solution offers the best solar service that
+                            saves your money and reliable power delivery
+                        </p>
+                    </div>
+                    <div class="d-md-flex justify-content-between text-center">
+                        <div class="w-100">
+                            <img
+                                class="img-services"
+                                src="./icons/solar-panel-solid.svg"
+                                alt=""
+                            />
+                            <p class="m-0">Solar Solutions</p>
+                        </div>
+                        <div class="w-100">
+                            <img
+                                class="img-services"
+                                src="./icons/creative-commons-zero.svg"
+                                alt=""
+                            />
+                            <p class="m-0">
+                                <strong>ZERO</strong> Power Interruption
+                            </p>
+                        </div>
+                    </div>
+                    <div class="w-100">
+                        <img
+                            class="img-services"
+                            src="./icons/peso-sign-solid.svg"
+                            alt=""
+                        />
+                        <p class="m-0">Affordable Price</p>
+                    </div>
+                </div>
+                <div
+                    id="contacts"
+                    class="col-md-6 min-vh-100 d-flex align-items-center justify-content-center"
+                >
+                    <div
+                        class="card-contact mx-md-2 my-md-2 mx-xl-3 my-xl-3 p-5 text-center"
+                    >
+                        <h2>Contact Us</h2>
+                        <h5 class="m-0">Get to know more?</h5>
+                        <p class="p-0">Leave your details here!</p>
+
+                        <form
+                            action="#"
+                            class="d-flex flex-column contact-form text-center"
+                        >
+                            <input
+                                type="text"
+                                placeholder="Full Name"
+                                required
+                            />
+                            <input type="text" placeholder="Address" required />
+                            <input type="email" placeholder="Email" required />
+                            <input
+                                type="number"
+                                placeholder="Contact Number"
+                                required
+                            />
+                            <textarea
+                                name=""
+                                id=""
+                                cols="30"
+                                rows="10"
+                                placeholder="Message"
+                            ></textarea>
+                            <button
+                                c
+                                type="submit"
+                                class="button-two mx-auto p-1 mt-2 px-2 rounded-pill w-50 text-center"
+                            >
+                                Submit
+                            </button>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- Services and Contact End -->
+
+        <!-- Footer Start -->
+        <div class="container-fluid foot-contain">
+            <div
+                class="row w-75 mt-4 mx-auto my-auto pre-foot text-md-start text-center"
+            >
+                <div class="col-md-4 mb-2">
+                    <h4>Office Details</h4>
+                    <p class="m-0">Mobo, Masbate</p>
+                    <p class="m-0">091231586 / 125364</p>
+                    <a
+                        target="_blank"
+                        class="decoration-none"
+                        href="https://goo.gl/maps/TtnP8Te6Kf7sf4DHA"
+                        >Get Directions</a
+                    >
+                </div>
+                <div class="col-md-4">
+                    <h4 class="">Services</h4>
+                    <ul class="list-unstyled">
+                        <li><p class="m-0">Solar Panel Installation</p></li>
+                        <li><p class="m-0">Testing and Commissioning</p></li>
+                        <li>
+                            <p class="m-0">Maintenance and Technical Support</p>
+                        </li>
+                        <li><p class="m-0">Supply and Delivery</p></li>
+                    </ul>
+                </div>
+                <div class="col-md-4 socials">
+                    <h4>Socials</h4>
+                    <a
+                        target="_blank"
+                        href="https://www.facebook.com/profile.php?id=100086059574063"
+                        ><img src="./icons/facebook.png" alt=""
+                    /></a>
+                    <a
+                        target="_blank"
+                        href="mailto:malucernas@debesmscat.edu.ph"
+                        ><img src="./icons/email.png" alt=""
+                    /></a>
+                    <a target="_blank" href="https://www.linkedin.com/"
+                        ><img src="./icons/linkedin.png" alt=""
+                    /></a>
+                </div>
+            </div>
+            <div class="card-foot text-center p-3">
+                <h4>2022 Brownout Zero Power Solution &copy;</h4>
+            </div>
+        </div>
+
+        <!-- Footer End -->
 
         <!-- Bootstrap -->
         <script
@@ -284,5 +429,19 @@
             integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V"
             crossorigin="anonymous"
         ></script>
+
+        <!-- Navbar appear when scroll up -->
+        <script>
+            var prevScrollpos = window.pageYOffset;
+            window.onscroll = function () {
+                var currentScrollPos = window.pageYOffset;
+                if (prevScrollpos > currentScrollPos) {
+                    document.getElementById("nav-bar").style.top = "0";
+                } else {
+                    document.getElementById("nav-bar").style.top = "-400px";
+                }
+                prevScrollpos = currentScrollPos;
+            };
+        </script>
     </body>
 </html>
